{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 131,
  "lineage": "ba58b8f0-3205-6352-5262-01b6b58e4dc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0112fae72c8d6356a",
            "domain": "vpc",
            "id": "eipalloc-08412200ee0d1448e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0541afeeb16e9dbf9",
            "private_dns": "ip-10-1-0-228.us-east-2.compute.internal",
            "private_ip": "10.1.0.228",
            "public_dns": "ec2-3-140-82-38.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.82.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dc10073cb60f0620",
            "domain": "vpc",
            "id": "eipalloc-01c57acd3b4eeef7c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-040a6fc51fe1f9a77",
            "private_dns": "ip-10-1-4-130.us-east-2.compute.internal",
            "private_ip": "10.1.4.130",
            "public_dns": "ec2-18-116-78-247.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.78.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e7ca2ef94a0ae86",
            "arn": "arn:aws:ec2:us-east-2:367581849394:instance/i-000fe21ac90b4a165",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-000fe21ac90b4a165",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5403461c73e9d84",
            "private_dns": "ip-10-1-0-116.us-east-2.compute.internal",
            "private_ip": "10.1.0.116",
            "public_dns": "ec2-3-138-122-85.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.122.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb29f3daa536430d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d86ec4b8571cff22",
            "tags": {
              "Name": "ec2_1a.0",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017ed658ceab6716e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.practice_key_pair",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1a_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e7ca2ef94a0ae86",
            "arn": "arn:aws:ec2:us-east-2:367581849394:instance/i-0549c4ba5dff68ebf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0549c4ba5dff68ebf",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c56a391f85416f56",
            "private_dns": "ip-10-1-0-111.us-east-2.compute.internal",
            "private_ip": "10.1.0.111",
            "public_dns": "ec2-18-222-22-212.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.22.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1a3b162b52ecbc2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d86ec4b8571cff22",
            "tags": {
              "Name": "ec2_1a_back.0",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017ed658ceab6716e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.practice_key_pair",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e7ca2ef94a0ae86",
            "arn": "arn:aws:ec2:us-east-2:367581849394:instance/i-0de5792772456d8d7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0de5792772456d8d7",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "practice_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d76e6042a70a55b",
            "private_dns": "ip-10-1-4-113.us-east-2.compute.internal",
            "private_ip": "10.1.4.113",
            "public_dns": "ec2-3-135-225-2.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.225.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05817923afe1910a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b8d60f5e6ace818c",
            "tags": {
              "Name": "ec2_1b.0",
              "Service": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017ed658ceab6716e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.practice_key_pair",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:internet-gateway/igw-068c4275ce96e8070",
            "id": "igw-068c4275ce96e8070",
            "owner_id": "367581849394",
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "practice_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:loadbalancer/net/practice-lb/f8c3e59c4a382790",
            "arn_suffix": "net/practice-lb/f8c3e59c4a382790",
            "dns_name": "practice-lb-f8c3e59c4a382790.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:loadbalancer/net/practice-lb/f8c3e59c4a382790",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "practice-lb",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-01c57acd3b4eeef7c",
                "subnet_id": "subnet-0b8d60f5e6ace818c"
              },
              {
                "allocation_id": "eipalloc-08412200ee0d1448e",
                "subnet_id": "subnet-0d86ec4b8571cff22"
              }
            ],
            "subnets": [
              "subnet-0b8d60f5e6ace818c",
              "subnet-0d86ec4b8571cff22"
            ],
            "vpc_id": "vpc-003f2d7fe4e5cb937",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_eip.nlb_eip_1a",
            "aws_eip.nlb_eip_1b",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "practice_lb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:listener/net/practice-lb/f8c3e59c4a382790/b9e0debfcb611cd5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:listener/net/practice-lb/f8c3e59c4a382790/b9e0debfcb611cd5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:loadbalancer/net/practice-lb/f8c3e59c4a382790",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.practice_lb",
            "aws_lb_target_group.practice_lb_http_tg",
            "aws_lb_target_group.practice_lb_http_tg_back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "practice_lb_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61",
            "arn_suffix": "targetgroup/practice-lb-http-tg/b61824e00de01c61",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61",
            "lambda_multi_value_headers_enabled": false,
            "name": "practice-lb-http-tg",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "practice_lb_http_tg_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg-back/3d3b8ea946c21d6f",
            "arn_suffix": "targetgroup/practice-lb-http-tg-back/3d3b8ea946c21d6f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg-back/3d3b8ea946c21d6f",
            "lambda_multi_value_headers_enabled": false,
            "name": "practice-lb-http-tg-back",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "practice_lb_http_ta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61-20210625160858807000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61",
            "target_id": "i-000fe21ac90b4a165"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.ec2_1a",
            "aws_instance.ec2_1b",
            "aws_key_pair.practice_key_pair",
            "aws_lb_target_group.practice_lb_http_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61-20210625160858780400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg/b61824e00de01c61",
            "target_id": "i-0de5792772456d8d7"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.ec2_1a",
            "aws_instance.ec2_1b",
            "aws_key_pair.practice_key_pair",
            "aws_lb_target_group.practice_lb_http_tg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "practice_lb_http_ta_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg-back/3d3b8ea946c21d6f-20210625160858805200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:367581849394:targetgroup/practice-lb-http-tg-back/3d3b8ea946c21d6f",
            "target_id": "i-0549c4ba5dff68ebf"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.ec2_1a_back",
            "aws_key_pair.practice_key_pair",
            "aws_lb_target_group.practice_lb_http_tg_back",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.practice_vpc",
            "data.template_file.ec2_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05eeaffc604f29f2f",
            "owner_id": "367581849394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068c4275ce96e8070",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-1a"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05c720fa64ebe60ec",
            "owner_id": "367581849394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068c4275ce96e8070",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-1b"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0322d6675fef84cad",
            "route_table_id": "rtb-05eeaffc604f29f2f",
            "subnet_id": "subnet-0d86ec4b8571cff22"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public_route_1a",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb54e692cfe49acd",
            "route_table_id": "rtb-05c720fa64ebe60ec",
            "subnet_id": "subnet-0b8d60f5e6ace818c"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public_route_1b",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:security-group/sg-017ed658ceab6716e",
            "description": "Allow incoming Blocker SSR connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017ed658ceab6716e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "106.215.85.150/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "367581849394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:subnet/subnet-02f2645d22e3cb993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-02f2645d22e3cb993",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367581849394",
            "tags": {
              "Name": "private_subnet_1a"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:subnet/subnet-0ef2acc94a0d38c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.12.0/24",
            "id": "subnet-0ef2acc94a0d38c94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367581849394",
            "tags": {
              "Name": "private_subnet_1b"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:subnet/subnet-0d86ec4b8571cff22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0d86ec4b8571cff22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367581849394",
            "tags": {
              "Name": "public_subnet_1a"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:subnet/subnet-0b8d60f5e6ace818c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0b8d60f5e6ace818c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367581849394",
            "tags": {
              "Name": "public_subnet_1b"
            },
            "vpc_id": "vpc-003f2d7fe4e5cb937"
          },
          "dependencies": [
            "aws_vpc.practice_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "practice_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367581849394:vpc/vpc-003f2d7fe4e5cb937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08b8282fb3fc781ae",
            "default_route_table_id": "rtb-0218968008d25f7d1",
            "default_security_group_id": "sg-04f316006f71f0055",
            "dhcp_options_id": "dopt-9e13fdf7",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-003f2d7fe4e5cb937",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0218968008d25f7d1",
            "owner_id": "367581849394",
            "tags": {
              "Name": "practice_vpc"
            }
          }
        }
      ]
    }
  ]
}